增加简单模板代码

--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "react-library-tpl",
   "version": "1.0.0",
   "description": "react library develop template ",
-  "main": "index.js",
+  "main": "dist/index.esm.js",
   "repository": "https://github.com/gebin/react-library-tpl",
   "author": "gebin",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "scripts": {
+    "build":"father build",
+    "doc:dev":"father doc dev"
+  },
+  "dependencies": {
+    "father": "^2.29.0"
+  }
 }
